--- a/recyclertableview/build.gradle
+++ b/recyclertableview/build.gradle
@@ -20,7 +20,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    api 'com.android.support:recyclerview-v7:28.0.0'
+    
+    api 'androidx.recyclerview:recyclerview:1.0.0'
 }
