--- a/recyclertableview/build.gradle
+++ b/recyclertableview/build.gradle
@@ -1,11 +1,13 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 28
+    namespace 'com.mc0239.recyclertableview'
+
+    compileSdkVersion 33
 
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 32
+        targetSdkVersion 33
     }
 
     buildTypes {
